5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1621_2920.log
== TEST (2019-04-01 18:15:13) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = float(input("Bebidas:"))
sobremesas = float(input("Sobremesas: "))

total = (prato/1000)*(26.90)

print(total)
-- OUTPUT:
24.105628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:15:58) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = float(input("Bebidas:"))
sobremesas = float(input("Sobremesas: "))

total = (prato/1000)*(26.90)+(bebidas*3.50)+(sobremesas*3)

print(total)
-- OUTPUT:
24.105628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:16:15) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = int(input("Bebidas:"))
sobremesas = int(input("Sobremesas: "))

total = (prato/1000)*(26.90)+(bebidas*3.50)+(sobremesas*3)

print(total)
-- OUTPUT:
24.105628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:16:25) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = int(input("Bebidas: "))
sobremesas = int(input("Sobremesas: "))

total = (prato/1000)*(26.90)+(bebidas*3.50)+(sobremesas*3)

print(total)
-- EXECUTION TIME:
0.163825
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24.105628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
13.964906999999998
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
9.076440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:16:28) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = int(input("Bebidas: "))
sobremesas = int(input("Sobremesas: "))

total = (prato/1000)*(26.90)+(bebidas*3.50)+(sobremesas*3)

print(total)
-- OUTPUT:
24.105628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:17:44) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = int(input("Bebidas: "))
sobremesas = int(input("Sobremesas: "))
PP = 26.90
PB = 3.50
PS = 3
total = (prato/1000)*(PP)+(bebidas*PB)+(sobremesas*PS)

print(total)
-- EXECUTION TIME:
0.14722
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24.105628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
13.964906999999998
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
9.076440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:18:00) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = int(input("Bebidas: "))
sobremesas = int(input("Sobremesas: "))
PP = 26.90/1000
PB = 3.50
PS = 3
total = (prato)*(PP)+(bebidas*PB)+(sobremesas*PS)

print(total)
-- EXECUTION TIME:
0.20936
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24.105628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
13.964907
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
9.076440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:18:01) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = int(input("Bebidas: "))
sobremesas = int(input("Sobremesas: "))
PP = 26.90/1000
PB = 3.50
PS = 3
total = (prato)*(PP)+(bebidas*PB)+(sobremesas*PS)

print(total)
-- OUTPUT:
24.105628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:18:41) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = int(input("Bebidas: "))
sobremesas = int(input("Sobremesas: "))
PP = 26.90
PB = 3.50
PS = 3
total = float((prato/1000)*(PP)+(bebidas*PB)+(sobremesas*PS))

print(total)
-- EXECUTION TIME:
0.126975
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24.105628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
13.964906999999998
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
9.076440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:18:59) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = int(input("Bebidas: "))
sobremesas = int(input("Sobremesas: "))
PP = 26.90
PB = 3.50
PS = 3
total = float(round((prato/1000)*(PP)+(bebidas*PB)+(sobremesas*PS)))

print(total)
-- OUTPUT:
24.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:19:29) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = int(input("Bebidas: "))
sobremesas = int(input("Sobremesas: "))
PP = 26.90
PB = 3.50
PS = 3
total = float((prato/1000)*(PP)+(bebidas*PB)+(sobremesas*PS))

print(round(total,2)
-- ERROR:
File "XXXX", line 13
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:19:35) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = int(input("Bebidas: "))
sobremesas = int(input("Sobremesas: "))
PP = 26.90
PB = 3.50
PS = 3
total = (prato/1000)*(PP)+(bebidas*PB)+(sobremesas*PS))

print(round(total,2)
-- ERROR:
File "XXXX", line 10
    total = (prato/1000)*(PP)+(bebidas*PB)+(sobremesas*PS))
                                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:19:40) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = int(input("Bebidas: "))
sobremesas = int(input("Sobremesas: "))
PP = 26.90
PB = 3.50
PS = 3
total = (prato/1000)*(PP)+(bebidas*PB)+(sobremesas*PS)

print(round(total,2)
-- ERROR:
File "XXXX", line 13
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:19:54) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = int(input("Bebidas: "))
sobremesas = int(input("Sobremesas: "))
PP = 26.90
PB = 3.50
PS = 3
total = (prato/1000)*(PP)+(bebidas*PB)+(sobremesas*PS)

print(round(total, 2)
-- ERROR:
File "XXXX", line 13
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:20:06) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = int(input("Bebidas: "))
sobremesas = int(input("Sobremesas: "))
PP = 26.90
PB = 3.50
PS = 3
total = (prato/1000)*(PP)+(bebidas*PB)+(sobremesas*PS)


-- ERROR:
File "XXXX", line 13
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:20:29) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = int(input("Bebidas: "))
sobremesas = int(input("Sobremesas: "))
PP = 26.90
PB = 3.50
PS = 3
total = (prato/1000)*(PP)+(bebidas*PB)+(sobremesas*PS)

print(round(total, 2))
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:20:34) 
-- CODE:
import math


prato = float(input("Gramas do prato: "))
bebidas = int(input("Bebidas: "))
sobremesas = int(input("Sobremesas: "))
PP = 26.90
PB = 3.50
PS = 3
total = (prato/1000)*(PP)+(bebidas*PB)+(sobremesas*PS)

print(round(total, 2))
-- EXECUTION TIME:
0.133811
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24.11
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
13.96
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
9.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
